Exercise 13 - ParameterizedTest fixing errors